...

    var title: String {
        switch self {
        case .day:
            return "Today"
        case .week:
            return "Week"
        case .month:
            return "Month"
        }
    }

    var detailTitle: String {
        switch self {
        case .day:
...
